# samba-talloc-debug

./: .gitignore  README
auth/: wscript_build
auth/credentials/: pycredentials.h  wscript_build
dfs_server/: wscript_build
dynconfig/: wscript
examples/libsmbclient/: Makefile  Makefile.internal.in
file_server/: file_server.c  wscript_build
lib/addns/: dns.h
lib/async_req/: async_sock.c  async_sock.h  wscript_build
lib/compression/: testsuite.c
lib/crypto/: wscript_build
lib/dbwrap/: dbwrap_cache.h  dbwrap_file.h  dbwrap_ntdb.h  dbwrap_rbt.h  dbwrap_tdb.h
lib/krb5_wrap/: wscript_build
lib/ldb/: pyldb.h  wscript
lib/ldb-samba/: ldb_wrap.h  wscript_build
lib/smbconf/: wscript_build
lib/socket_wrapper/: py_socket_wrapper.c  wscript_build
lib/talloc/: CMakeLists.txt  pytalloc_debug.c  pytalloc_debug.h  pytalloc_debug_util.c  pytalloc_debug_util.pc.in  talloc.c  talloc.h  talloc.kdev4  talloc_debug.c  talloc_debug.h  talloc_debug.pc.in  testsuite.c  wscript
lib/talloc/.kdev4/: talloc.kdev4
lib/talloc/compat/: talloc_compat1.c
lib/talloc/doc/: tutorial_debugging.dox  tutorial_introduction.dox
lib/talloc/man/: talloc_debug.3.xml
lib/talloc/test/: CMakeLists.txt  Makefile  callback.c
lib/talloc/utils/: list.h
lib/tdb_wrap/: wscript_build
lib/tdr/: tdr.h  wscript_build
lib/tevent/: tevent.h  tevent_util.c  wscript
lib/torture/: wscript_build
libcli/smb/: wscript
librpc/: wscript_build
nsswitch/: pam_winbind.h  wb_reqtrans.c  wb_reqtrans.h  wscript_build
python/: wscript_build
source3/: configure.in  wscript  wscript_build
(+84 files in other folders)
